# pushkey

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  KEY_IMPORT_TEMPLATE.md  LICENSE  PUBLIC_REPO_FILES.md  Pushkey.spec  README.md  SECURITY.md  build_exe.py  fly.toml  gen_license.py  launch_admin.ps1  providers.json  pushkey.py  pushkey_agent_tokens.py  pushkey_cli.py  pushkey_cloud_api.py  pushkey_crypto.py  pushkey_icons.py  pushkey_mcp.py  pushkey_providers.py  pushkey_shared.py  pushkey_tiers.py  pushkey_vault.py  pyproject.toml  pytest.ini  railway.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
browser-pushkey/: README.md  background.js  manifest.json  popup.html  popup.js
docs/: mcp-setup.md  org-profile-readme.md
docs/superpowers/plans/: 2026-04-27-notebook-import.md  2026-05-02-pushkey-ui-overhaul.md  2026-05-03-license-crm.md  2026-05-03-pushkey-cli.md  2026-05-03-recovery-key.md  (+2 more)
npm/: README.md  package.json  requirements-cli.txt
npm/scripts/: install.js
server/: main.py
tests/: conftest.py  test_admin_api.py  test_agent_tokens.py  test_cli.py  test_encryption_edge_cases.py  test_env_injection.py  test_key_rotation.py  test_mcp.py  test_multi_project.py  test_provider_detection.py  test_providers.py  test_tiers.py  test_ui_helpers.py  test_vault_crypto.py
vscode-pushkey/: .vscodeignore  CHANGELOG.md  README.md  extension.js  package.json
web/: .env.example  package-lock.json  package.json  supabase-setup.sql  tsconfig.json
web/_source/: dynamic.ts  server.ts
web/public/: llms.txt
(+63 files in other folders)
